namespace RpgLibrary.World;

public enum NpcInteractionStatus
{
    Success,
    NpcNotInCurrentMap
}
