namespace RpgLibrary.World;

public enum PurchaseStatus
{
    Success,
    ItemNotSold,
    OutOfStock,
    InsufficientGold,
    ShopUnavailable
}
