namespace RpgLibrary.World;

public enum QuestStatus
{
    Available,
    Active,
    Completed
}
