namespace RpgLibrary.World;

public enum QuestType
{
    Main,
    Side
}
